DS-1064: Minor code improvements in space index creations
Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>