@@ -24,29 +24,18 @@ import static com.here.xyz.models.hub.Space.TABLE_NAME;
 import static com.here.xyz.util.db.pg.IndexHelper.buildCreateIndexQuery;
 import static com.here.xyz.util.db.pg.IndexHelper.buildDropIndexQuery;
 
-import static com.here.xyz.util.db.pg.XyzSpaceTableHelper.SystemIndex.GEO;
-import static com.here.xyz.util.db.pg.XyzSpaceTableHelper.SystemIndex.VERSION_ID;
-import static com.here.xyz.util.db.pg.XyzSpaceTableHelper.SystemIndex.NEXT_VERSION;
-import static com.here.xyz.util.db.pg.XyzSpaceTableHelper.SystemIndex.OPERATION;
-import static com.here.xyz.util.db.pg.XyzSpaceTableHelper.SystemIndex.SERIAL;
-import static com.here.xyz.util.db.pg.XyzSpaceTableHelper.SystemIndex.VIZ;
-import static com.here.xyz.util.db.pg.XyzSpaceTableHelper.SystemIndex.AUTHOR;
-
-import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonSubTypes;
-import com.fasterxml.jackson.annotation.JsonValue;
 import com.here.xyz.Typed;
 import com.here.xyz.util.Hasher;
 import com.here.xyz.util.db.SQLQuery;
-import org.apache.commons.codec.digest.DigestUtils;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
+import org.apache.commons.codec.digest.DigestUtils;
 
 public class XyzSpaceTableHelper {
 
@@ -86,15 +75,15 @@ public class XyzSpaceTableHelper {
     }
 
     public String getIndexType() {
-        return switch (this) {
-            case GEO -> "GIST";
-            case VERSION_ID, NEXT_VERSION, OPERATION, SERIAL, VIZ, AUTHOR -> "BTREE";
-        };
+      return switch (this) {
+        case GEO -> "GIST";
+        case VERSION_ID, NEXT_VERSION, OPERATION, SERIAL, VIZ, AUTHOR -> "BTREE";
+      };
     }
 
     public List<String> getIndexContent() {
-      return switch (this){
-        case GEO -> List.of(("geo"));
+      return switch (this) {
+        case GEO -> List.of("geo");
         case VERSION_ID -> List.of("version", "id");
         case NEXT_VERSION -> List.of("next_version");
         case OPERATION -> List.of("operation");
@@ -145,28 +134,34 @@ public class XyzSpaceTableHelper {
    */
   @Deprecated
   public static List<SQLQuery> buildSpaceTableIndexQueries(String schema, String table, SQLQuery queryComment) {
-    return Arrays.asList(
-        buildCreateIndexQuery(schema, table, GEO.getIndexContent(), GEO.getIndexType(), SystemIndex.GEO.getIndexName(table)),
-        buildCreateIndexQuery(schema, table, VERSION_ID.getIndexContent(), VERSION_ID.getIndexType(), VERSION_ID.getIndexName(table)),
-        buildCreateIndexQuery(schema, table, NEXT_VERSION.getIndexContent(), NEXT_VERSION.getIndexType(), NEXT_VERSION.getIndexName(table)),
-        buildCreateIndexQuery(schema, table, OPERATION.getIndexContent(), OPERATION.getIndexType(), OPERATION.getIndexName(table)),
-        buildCreateIndexQuery(schema, table, SERIAL.getIndexContent(), SERIAL.getIndexType(), SERIAL.getIndexName(table)),
-        buildCreateIndexQuery(schema, table, VIZ.getIndexContent(), VIZ.getIndexType(), VIZ.getIndexName(table)),
-        buildCreateIndexQuery(schema, table, AUTHOR.getIndexContent(), AUTHOR.getIndexType(), AUTHOR.getIndexName(table))
-    ).stream().map(q -> addQueryComment(q, queryComment)).collect(Collectors.toList());
+    return buildSpaceTableIndexQueries(schema, table)
+        .stream()
+        .map(q -> addQueryComment(q, queryComment))
+        .toList();
+  }
+
+  /**
+   * @deprecated Please use labels instead. See: {@link SQLQuery#withLabel(String, String)}
+   * @param sourceQuery
+   * @param queryComment
+   * @return
+   */
+  @Deprecated
+  private static SQLQuery addQueryComment(SQLQuery sourceQuery, SQLQuery queryComment) {
+    return queryComment != null ? sourceQuery.withQueryFragment("queryComment", queryComment) : sourceQuery;
   }
 
   public static SQLQuery buildLoadSpaceTableIndicesQuery(String schema, String table) {
     return new SQLQuery("SELECT * FROM xyz_index_list_all_available(#{schema}, #{table});")
-            .withNamedParameter("schema", schema)
-            .withNamedParameter("table", table);
+        .withNamedParameter("schema", schema)
+        .withNamedParameter("table", table);
   }
 
 
   public static List<SQLQuery> buildSpaceTableDropIndexQueries(String schema, List<String> indices) {
     return indices.stream()
-            .map(index -> buildDropIndexQuery(schema, index))
-            .collect(Collectors.toList());
+        .map(index -> buildDropIndexQuery(schema, index))
+        .collect(Collectors.toList());
   }
 
   public static List<SQLQuery> buildCreateSpaceTableQueries(String schema, String table) {
@@ -183,79 +178,72 @@ public class XyzSpaceTableHelper {
   }
 
   public static List<SQLQuery> buildSpaceTableIndexQueries(String schema, String table) {
-    return buildSpaceTableIndexQueries(schema, table, null);
-  }
-
-  /**
-   * @deprecated Please use labels instead. See: {@link SQLQuery#withLabel(String, String)}
-   * @param sourceQuery
-   * @param queryComment
-   * @return
-   */
-  @Deprecated
-  private static SQLQuery addQueryComment(SQLQuery sourceQuery, SQLQuery queryComment) {
-    return queryComment != null ? sourceQuery.withQueryFragment("queryComment", queryComment) : sourceQuery;
+    return Arrays.asList(SystemIndex.values()).stream()
+        .map(index -> buildCreateIndexQuery(schema, table, index.getIndexContent(), index.getIndexType(), index.getIndexName(table)))
+        .toList();
   }
 
   public static SQLQuery buildColumnStorageAttributesQuery(String schema, String tableName) {
-      return new SQLQuery("ALTER TABLE ${schema}.${table} "
-          + "ALTER COLUMN id SET STORAGE MAIN, "
-          + "ALTER COLUMN jsondata SET STORAGE MAIN, "
-          + "ALTER COLUMN geo SET STORAGE MAIN, "
-          + "ALTER COLUMN operation SET STORAGE PLAIN, "
-          + "ALTER COLUMN next_version SET STORAGE PLAIN, "
-          + "ALTER COLUMN version SET STORAGE PLAIN, "
-          + "ALTER COLUMN i SET STORAGE PLAIN, "
-          + "ALTER COLUMN author SET STORAGE MAIN, "
+    //TODO: Move the following settings into the table creation query, after switching to PG17
+    return new SQLQuery("ALTER TABLE ${schema}.${table} "
+        + "ALTER COLUMN id SET STORAGE MAIN, "
+        + "ALTER COLUMN jsondata SET STORAGE MAIN, "
+        + "ALTER COLUMN geo SET STORAGE MAIN, "
+        + "ALTER COLUMN operation SET STORAGE PLAIN, "
+        + "ALTER COLUMN next_version SET STORAGE PLAIN, "
+        + "ALTER COLUMN version SET STORAGE PLAIN, "
+        + "ALTER COLUMN i SET STORAGE PLAIN, "
+        + "ALTER COLUMN author SET STORAGE MAIN, "
 
-          + "ALTER COLUMN id SET COMPRESSION lz4, "
-          + "ALTER COLUMN jsondata SET COMPRESSION lz4, "
-          + "ALTER COLUMN geo SET COMPRESSION lz4, "
-          + "ALTER COLUMN author SET COMPRESSION lz4;")
-          .withVariable(SCHEMA, schema)
-          .withVariable(TABLE, tableName);
+        + "ALTER COLUMN id SET COMPRESSION lz4, "
+        + "ALTER COLUMN jsondata SET COMPRESSION lz4, "
+        + "ALTER COLUMN geo SET COMPRESSION lz4, "
+        + "ALTER COLUMN author SET COMPRESSION lz4;")
+        .withVariable(SCHEMA, schema)
+        .withVariable(TABLE, tableName);
   }
 
   public static SQLQuery buildCreateHeadPartitionQuery(String schema, String rootTable) {
-      return new SQLQuery("CREATE TABLE IF NOT EXISTS ${schema}.${partitionTable} "
-          + "PARTITION OF ${schema}.${rootTable} FOR VALUES FROM (max_bigint()) TO (MAXVALUE)")
-          .withVariable(SCHEMA, schema)
-          .withVariable("rootTable", rootTable)
-          .withVariable("partitionTable", rootTable + HEAD_TABLE_SUFFIX);
+    return new SQLQuery("CREATE TABLE IF NOT EXISTS ${schema}.${partitionTable} "
+        + "PARTITION OF ${schema}.${rootTable} FOR VALUES FROM (max_bigint()) TO (MAXVALUE)")
+        .withVariable(SCHEMA, schema)
+        .withVariable("rootTable", rootTable)
+        .withVariable("partitionTable", rootTable + HEAD_TABLE_SUFFIX);
   }
 
   public static SQLQuery buildCreateHistoryPartitionQuery(String schema, String rootTable, long partitionNo) {
-      return new SQLQuery(
-          "SELECT xyz_create_history_partition('" + schema + "', '" + rootTable + "', " + partitionNo + ", " + PARTITION_SIZE + ")");
+    return new SQLQuery(
+        "SELECT xyz_create_history_partition('" + schema + "', '" + rootTable + "', " + partitionNo + ", " + PARTITION_SIZE + ")");
   }
 
   public static SQLQuery buildCreateSpaceTableQuery(String schema, String table) {
-      String tableFields = "id TEXT NOT NULL, "
-              + "version BIGINT NOT NULL, "
-              + "next_version BIGINT NOT NULL DEFAULT 9223372036854775807::BIGINT, "
-              + "operation CHAR NOT NULL, "
-              + "author TEXT, "
-              + "jsondata JSONB, "
-              + "geo geometry(GeometryZ, 4326), "
-              + "i BIGSERIAL, "
-              + "CONSTRAINT ${uniqueConstraintName} UNIQUE (id, next_version), "
-              + "CONSTRAINT ${primKeyConstraintName} PRIMARY KEY (id, version, next_version)";
+    String tableFields = "id TEXT NOT NULL, "
+        + "version BIGINT NOT NULL, "
+        + "next_version BIGINT NOT NULL DEFAULT 9223372036854775807::BIGINT, "
+        + "operation CHAR NOT NULL, "
+        + "author TEXT, "
+        + "jsondata JSONB, "
+        + "geo geometry(GeometryZ, 4326), "
+        + "i BIGSERIAL, "
+        + "CONSTRAINT ${uniqueConstraintName} UNIQUE (id, next_version), "
+        + "CONSTRAINT ${primKeyConstraintName} PRIMARY KEY (id, version, next_version)";
 
-      SQLQuery createTable = new SQLQuery("CREATE TABLE IF NOT EXISTS ${schema}.${table} (${{tableFields}}) PARTITION BY RANGE (next_version)")
-          .withQueryFragment("tableFields", tableFields)
-          .withVariable(SCHEMA, schema)
-          .withVariable(TABLE, table)
-          .withVariable("uniqueConstraintName", table + "_unique")
-          .withVariable("primKeyConstraintName", table + "_primKey");
-      return createTable;
+    SQLQuery createTable = new SQLQuery(
+        "CREATE TABLE IF NOT EXISTS ${schema}.${table} (${{tableFields}}) PARTITION BY RANGE (next_version)")
+        .withQueryFragment("tableFields", tableFields)
+        .withVariable(SCHEMA, schema)
+        .withVariable(TABLE, table)
+        .withVariable("uniqueConstraintName", table + "_unique")
+        .withVariable("primKeyConstraintName", table + "_primKey");
+    return createTable;
   }
 
   public static SQLQuery buildCreateSequenceQuery(String schema, String table, String columnName) {
-      return new SQLQuery("CREATE SEQUENCE IF NOT EXISTS ${schema}.${sequence} MINVALUE 1 OWNED BY ${schema}.${table}.${columnName}")
-          .withVariable(SCHEMA, schema)
-          .withVariable(TABLE, table)
-          .withVariable("sequence", table + "_" + columnName + "_seq")
-          .withVariable("columnName", columnName);
+    return new SQLQuery("CREATE SEQUENCE IF NOT EXISTS ${schema}.${sequence} MINVALUE 1 OWNED BY ${schema}.${table}.${columnName}")
+        .withVariable(SCHEMA, schema)
+        .withVariable(TABLE, table)
+        .withVariable("sequence", table + "_" + columnName + "_seq")
+        .withVariable("columnName", columnName);
   }
 
   public static String getTableNameForSpaceId(String spaceId, boolean hashed) {
